# vendored_deps

./: README.md  pyproject.toml
package_deps/: conda_cloud.py  pypi_cloud.py
